 * Messages which mention you are no longer grouped with messages from the same user which do not.
 * Add an option to the Get Info window to auto-join a group chat on connect.
 * Add support for chat topics. Note that message styles must support the feature for them to show up.
 * Stops the "retrieving information" spinner from going off for bookmarks.

Contacts
 * Authorization requests no longer create one alert panel per request; instead, Adium collects them in a single window, listing all pending requests with add, ignore, and deny buttons.
 * Reduced complexity when determining what account is preferred for messaging a given contact. (#10547)
 * Added support for contacts in multiple groups (not yet working on trunk entirely)
 * Corrected adding contacts to multiple accounts. The "Add Contact" window was only adding to the existing account.
 * Add account-specific menu items (such as "Initiate Multi-User Chat" or "Initiate Direct IM") to the main Contact menu.
 * Corrected a bug where a combined contact would be "always visible" and toggling the preference would not unset it.

Logging
 * You can now replace Logs folder with an alias to another folder (on, say, an encrypted disk image). (#992)
 * Search terms in the Transcript Viewer now match any part of text unless a wildcard is used. (#6364)
 * Sped up writing log files in certain situations. ([25499])
 * Corrected some situations where the log viewer lacked icons for group chats.
 * Events such as Direct IM status, joins and parts, and other information are now logged and displayed in the log viewer.

Contact List
 * Corrected a few bugs where contacts were hidden as offline when online, or placed in the offline group incorrectly.
 * Combined contacts now show the information in the contact list for the first available user. (#11007)
 * Improved speed of searching in contact list for larger lists.
 * Fix a small white line at the top of the contact list when "size to fit vertically" is set. (#11119)