@@ -33,6 +33,7 @@ Group Chats and Group Chat Bookmarks
  * Add an option to the Get Info window to auto-join a group chat on connect.
  * Add support for chat topics. Note that message styles must support the feature for them to show up.
  * Stops the "retrieving information" spinner from going off for bookmarks.
+ * Group chats now display online or offline based on their account's status.
 
 Contacts
  * Authorization requests no longer create one alert panel per request; instead, Adium collects them in a single window, listing all pending requests with add, ignore, and deny buttons.
